--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
+    "@types/localforage": "^0.0.34",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "@types/react-router-dom": "^5.3.3",
     "localforage": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-masonry-css": "^1.0.16",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-virtualized": "^9.22.3",
     "react-virtualized-image-measurer": "^0.4.0",
